Update with commits from main directory.

--- a/index.html
+++ b/index.html
@@ -2,20 +2,29 @@
 <html lang="en-US">
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" text="text/css" media="all">
+  <link href="css/styles.css" rel="stylesheet" text="text/css" media="all">
   <title>Visiting Machu Picchu</title>
 </head>
 <body>
   <div class="container">
-    <h1>Visiting Machu Picchu</h1>
-    <img src="img/machu-picchu.jpg">
-    <p>The walrus is truly a majestic animal. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-    </p>
-    <ul>
-      <li>Getting to Machu Picchu</li>
-      <li>Accomodations</li>
-      <li>Food</li>
-      <li>Travel tips</li>
-    </ul>
+    <div class="jumbotron">
+      <div class="color">
+        <h1>Visiting Machu Picchu</h1>
+        <img src="img/machu-picchu.jpg" class="centered-image">
+        <p>The walrus is truly a majestic animal. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
+        <ul>
+          <li>Getting to Machu Picchu</li>
+          <li>Accomodations</li>
+          <li>Food</li>
+          <li>Travel tips</li>
+        </ul>
+        <blockquote class="blockquote">
+          <p>"Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of the Inca Land."</p>
+          <foot class="blockquote-footer">Joe Schmoe</foot>
+        </blockquote>
+      </div>
+    </div>
   </div>
 </body>
 </html>
