Add Flexbox grids, 4 tour packages, css style h1.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,52 @@
           <p>"Few romances can ever surpass that of the granite citadel on top of the beetling precipices of Machu Picchu, the crown of the Inca Land."</p>
           <foot class="blockquote-footer">Joe Schmoe</foot>
         </blockquote>
+        <div class="row">
+          <div class="col-md-3">
+            <h1>Package 1</h1>
+            <ul>
+              <li>$2000</li>
+              <li>December 27</li>
+              <li>10 days</li>
+              <li>New Years Party</li>
+              <li>Train tours to surrounding towns.</li>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h1>Package 2</h1>
+            <ul>
+              <li>$1300</li>
+              <li>February 10</li>
+              <li>7 days</li>
+              <li>Culinary classes.</li>
+              <li>Train tours to surrounding towns.</li>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h1>Package 3</h1>
+            <ul>
+              <li>$2500</li>
+              <li>April 25</li>
+              <li>10 days</li>
+              <li>LLama farm visits.</li>
+              <li>Train tours to surrounding towns.</li>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-3">
+            <h1>Package 4</h1>
+            <ul>
+              <li>$4000</li>
+              <li>December 27</li>
+              <li>20 days</li>
+              <li>Farm visits and culinary classes.</li>
+              <li>Train tours to surrounding towns.</li>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </div>
