--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
               </li>
             </ul>
           </div>
+          <li></li>
+          <li></li>
+          <li></li>
+        </div>
           <div class="col-md-3">
             <h1>Package 4</h1>
             <ul>
