Add buttons for darkmode, lightmode, smalltext, largetext)

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet" text="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" text="text/css" media="all">
+  <script src="js/scripts.js"></script>
   <title>Visiting Machu Picchu</title>
 </head>
 <body>
   <div class="container">
     <div class="jumbotron">
       <div class="color">
-        <h1>Visiting Machu Picchu</h1>
+        <h1 id="test">Visiting Machu Picchu</h1>
+        <button type="button" class="dark">Dark Mode</button>
+        <button type="button" class="light">Light Mode</button>
+        <button type="button" class="smallFont">Small Font</button>
+        <button type="button" class="largeFont">Large Font</button>
         <img src="img/machu-picchu.jpg" class="centered-image">
-        <p>The walrus is truly a majestic animal. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <p id="intro">The walrus is truly a majestic animal. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         </p>
         <ul>
           <li>Getting to Machu Picchu</li>
